--- a/rt_gui_core/package.xml
+++ b/rt_gui_core/package.xml
@@ -15,6 +15,7 @@
 
   <depend>readline</depend>
   <depend>pthread</depend>
+  <depend>Qt5Core</depend>
   <depend>Qt5Widgets</depend>
   <depend>Qwt</depend>
 
