--- a/rt_gui_ros2/package.xml
+++ b/rt_gui_ros2/package.xml
@@ -9,7 +9,7 @@
 
   <license>Apache-2.0</license>
 
-  <buildtool_depend>ament_cmake_python</buildtool_depend>
+  <buildtool_depend>ament_cmake</buildtool_depend>
 
   <depend>rclpy</depend>
   <depend>rclcpp</depend>
