--- a/package.xml
+++ b/package.xml
@@ -13,4 +13,7 @@
   <exec_depend>message_runtime</exec_depend>
   <exec_depend>rospy</exec_depend>
 
+  <build_depend>pybind11_catkin</build_depend>
+  <exec_depend>pybind11_catkin</exec_depend>
+
 </package>
