--- a/rt_gui_core/package.xml
+++ b/rt_gui_core/package.xml
@@ -9,9 +9,8 @@
 
   <license>Apache-2.0</license>
 
-  <buildtool_depend condition="$ament_cmake_FOUND == true">ament_cmake</buildtool_depend>
-  <buildtool_depend condition="$catkin_FOUND == true">catkin</buildtool_depend>
-  <member_of_group condition="$ament_cmake_FOUND == true">rosidl_interface_packages</member_of_group>
+  <buildtool_depend condition="$ROS_VERSION == 2">ament_cmake</buildtool_depend>
+  <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend>
 
   <depend>readline</depend>
   <depend>pthread</depend>
