--- a/rt_gui_msgs/package.xml
+++ b/rt_gui_msgs/package.xml
@@ -9,12 +9,20 @@
 
   <license>Apache-2.0</license>
 
-  <buildtool_depend condition="$ament_cmake_FOUND == true">ament_cmake</buildtool_depend>
-  <buildtool_depend condition="$catkin_FOUND == true">catkin</buildtool_depend>
-  <member_of_group condition="$ament_cmake_FOUND == true">rosidl_interface_packages</member_of_group>
+  <buildtool_depend condition="$ROS_VERSION == 2">ament_cmake</buildtool_depend>
+  <member_of_group condition="$ROS_VERSION == 2">rosidl_interface_packages</member_of_group>
+
+  <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend>
+  <exec_depend condition="$ROS_VERSION == 1">generate_messages</exec_depend>
+  <depend condition="$ROS_VERSION == 1">message_generation</depend>
+  <depend condition="$ROS_VERSION == 1">message_runtime</depend>
 
   <depend>std_msgs</depend>
 
-  <exec_depend condition="$catkin_FOUND == true">generate_messages</exec_depend>
+  <export>
+    <build_type condition="$ROS_VERSION == 2">ament_cmake</build_type>
+    <build_type condition="$ROS_VERSION == 1">catkin</build_type>
+  </export>
+
 
 </package>
