--- a/rt_gui_msgs/package.xml
+++ b/rt_gui_msgs/package.xml
@@ -11,6 +11,8 @@
 
   <buildtool_depend condition="$ROS_VERSION == 2">ament_cmake</buildtool_depend>
   <member_of_group condition="$ROS_VERSION == 2">rosidl_interface_packages</member_of_group>
+  <build_depend condition="$ROS_VERSION == 2">rosidl_default_generators</build_depend>
+  <exec_depend condition="$ROS_VERSION == 2">rosidl_default_runtime</exec_depend>
 
   <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend>
   <exec_depend condition="$ROS_VERSION == 1">generate_messages</exec_depend>
@@ -22,6 +24,7 @@
   <export>
     <build_type condition="$ROS_VERSION == 2">ament_cmake</build_type>
     <build_type condition="$ROS_VERSION == 1">catkin</build_type>
+    <member_of_group condition="$ROS_VERSION == 2">rosidl_interface_packages</member_of_group>
   </export>
 
 
